bug: Add to bag button cut off on tablet/mobile
STORE PAGE: Cutting off text on CTA

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -3,6 +3,7 @@
 .product {
   margin: 0 0 25px;
   width: 100%;
+  overflow: hidden;
 
   @include medium {
     margin: 0 0 40px;
@@ -126,4 +127,9 @@
   flex-shrink: 0;
   align-self: flex-start;
   margin-top: 4px;
+  margin-right: -20px;
+
+  @include large {
+    margin-right: 0;
+  }
 }
